datasource db {
  provider     = "mysql"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@index([userId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

enum Role {
  USER
  ADMIN
}

enum Platform {
  CompetitionCorner
  ScoringFit
}

model User {
  id            String        @id @default(cuid())
  name          String?
  email         String?       @unique
  emailVerified DateTime?
  image         String?
  role          Role          @default(USER)
  accounts      Account[]
  sessions      Session[]
  competitions  Competition[]
}

model Competition {
  id              String   @id @default(cuid())
  createdAt       DateTime @default(now())
  updatedAt       DateTime @default(now()) @updatedAt
  externalId      String
  rankingPlatform Platform @default(CompetitionCorner)
  // isTrial        Boolean
  userId          String
  user            User     @relation(fields: [userId], references: [id])
  name            String?
  /// @zod.number.int({ message: "error" }).gt(0, { message: "min lane is 1" }).lt(100,{message: "max lane is 99"})
  // stationNumber  Int      @default(10)
  // duration       Duration?

  primaryColor   String     @default("#000000")
  secondaryColor String     @default("#ffffff")
  logo           String?
  categories     Category[]
  floors         Floor[]
  events         Event[]

  // workouts       Workout[]
  // Link           Link[]
  // Live           Live?
  @@index([userId])
}

model Floor {
  id            String      @id @default(cuid())
  competition   Competition @relation(fields: [competitionId], references: [id])
  competitionId String
  name          String

  @@index([competitionId])
}

model Category {
  id            String        @id @default(cuid())
  competition   Competition   @relation(fields: [competitionId], references: [id])
  competitionId String
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @default(now()) @updatedAt
  name          String
  participants  Participant[]

  @@index([competitionId])
}

model Participant {
  id           String        @id @default(cuid())
  name         String
  category     Category      @relation(fields: [categoryId], references: [id])
  categoryId   String
  affectations Affectation[]

  @@index([categoryId])
}

model Event {
  id            String      @id @default(cuid())
  name          String
  heats         Heat[]
  competition   Competition @relation(fields: [competitionId], references: [id])
  competitionId String

  @@index([competitionId])
}

model Heat {
  id            String        @id @default(cuid())
  name          String?
  timestamp     DateTime
  event         Event         @relation(fields: [eventId], references: [id])
  eventId       String
  affectation   Affectation[]
  affectationId String

  @@index([eventId])
}

model Affectation {
  id            String      @id @default(cuid())
  heat          Heat        @relation(fields: [heatId], references: [id])
  heatId        String
  lane          String
  participant   Participant @relation(fields: [participantId], references: [id])
  participantId String

  @@index([heatId])
  @@index([participantId])
}
